examples/failing/f001-types-8bit.sq
{ 
    var x: u8;
    x = 256;
}